# mindup

./: Cargo.toml  Makefile.toml  README.md
app_runner/: Cargo.toml  settings.toml
app_runner/src/: main.rs
mindup_client/: Cargo.toml
mindup_client/src/: main.rs
mindup_common/: Cargo.toml
mindup_server/: Cargo.toml  settings.toml
mindup_server/src/: lib.rs
static/: index.html
