[package]
name = "mindup_app_runner"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2018"
license = "MIT"
repository = "https://github.com/noogen-projects/mindup"
description = "The mindup dapla-application runner"

[dependencies]
actix-utils = "=3.0.0-beta.1"
dapla_server = { git = "https://github.com/noogen-projects/dapla.git" }
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }