[package]
name = "mindup_app_runner"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/mindup"
description = "The mindup laplace-application runner"

[dependencies]
actix-web = { version = "4.2", features = ["rustls"] }
actix-utils = "3.0"
flexi_logger = "0.24"
laplace_server = { git = "https://github.com/noogen-projects/laplace.git" }
serde = { version = "1.0", features = ["derive"] }
