[package]
name = "mindup_common"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/mindup"
description = "The mindup laplace-application common library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
