[package]
name = "mindup_server"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/noogen-projects/mindup"
description = "The mindup laplace-application server WASM"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
borsh = "0.9"
laplace_wasm = { git = "https://github.com/noogen-projects/laplace.git" }
mindup_common = { path = "../mindup_common" }
serde_json = "1.0"
sql-builder = "3.1"
thiserror = "1.0"
